Prevent wrapping in columns with Japanese text

--- a/style.css
+++ b/style.css
@@ -87,3 +87,7 @@ tr.asian td {
 span.particle {
     color: #666;
 }
+
+td:not(:empty):nth-child(1), td:not(:empty):nth-child(2), td:not(:empty):nth-child(3) {
+    white-space: nowrap;
+}
